footer done, card alignment correction

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,5 @@
 .app {
     font-family: 'Space Grotesk', sans-serif;
+    /* background-color: blueviolet; */
+    max-width: 1440px;
 }
