--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -2,8 +2,7 @@
     display:flex;
     justify-content: space-between;
     margin-top: 20px;
-    padding: 0 20px;
+    padding: 20px 40px;
     font-size: 20px;
     font-weight: 500;
-    color: blue;
 }
