--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -4,7 +4,8 @@
     justify-content: space-between;
     align-items: center;
     min-height: 60px;
-    padding: 0 20px;
+    padding: 0 40px;
+    margin-top: 40px;
 
      /* Same font for all header components*/
     font-size: 20px;
