--- a/src/Main/Main.css
+++ b/src/Main/Main.css
@@ -1,17 +1,21 @@
 .main {
-    padding: 0 20px;
+    padding: 0 40px;
     font-weight: 700;
 }
 
 .card_section {
-    margin-top: 20px ;
+    /* margin-top: 20px ; */
+    font-size: 25px;
+    /* background-color: blue; */
+    padding-top: 40px;
 }
 
 .card_items {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    justify-content: center;
-    margin-top: 20px ;
+    justify-content:left;
+    margin-top: 40px ;
+    /* background-color: blueviolet; */
 }
 
